Landing page changes

--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
         <div class="nav-links" id="navLinks">
           <i class="fas fa-window-close" onclick="hideMenu()"> </i>
             <ul>
-              <li><a href="/home">HOME </a></li>
-              <li><a href="/objectives" target="_blank"> OBJECTIVE </a></li>
-              <li><a href="/authors">AUTHOR/S </a></li>
-              <li><a href="/contact">CONTACT </a></li>
-              <li><a href="/appreciation">APPRECIATION </a></li>
+              <li><a href="home">HOME </a></li>
+              <li><a href="objectives" target="_blank"> OBJECTIVE </a></li>
+              <li><a href="authors">AUTHOR/S </a></li>
+              <li><a href="contact">CONTACT </a></li>
+              <li><a href="appreciation">APPRECIATION </a></li>
             </ul>
           </div>
           <i class="fas fa-bars" onclick="showMenu()"> </i>
@@ -110,7 +110,7 @@
         <div class="text-box">
           <h1> A Database for Polyglutamine Diseases &#129504; </h1>
           <p> Information on 9 different diseases that result from abnormal CAG repeats.</p>
-          <a href="/home" class="btn-visit"> Visit the site! &#128104;&#8205;&#128300;</a>
+          <a href="home" class="btn-visit"> Visit the site! &#128104;&#8205;&#128300;</a>
         </div>
           <div class="footer-container">
             <a class="copy-right"> &copyPolyQ Database. All rights reserved. 2021<br> Authors mentioned and database creators all accounted for.<br> &#129516; &#129516; &#129516; &#129516; &#129516;</a>
