Update footer of all pages

--- a/appreciation/index.html
+++ b/appreciation/index.html
@@ -26,13 +26,13 @@
     </ul>
   </nav>
   <main>
-    <div class="appr" data-aos="fade-up" data-aos-offset="500" data-aos-duration="800">
+    <div class="appr" data-aos="fade-up" data-aos-offset="300" data-aos-duration="800">
       <a href="https://biorender.com/"><img src="../Images/biorender-logo.png"></a>
       <div class="center">
           <p>Thank you to BioRender for the tools to create some of our images.</p>
       </div>
     </div>
-    <div class="appr" data-aos="fade-up" data-aos-offset="600" data-aos-duration="800">
+    <div class="appr" data-aos="fade-up" data-aos-offset="500" data-aos-duration="800">
       <a href="https://www.mapchart.net/"><img src="../Images/mapchart-logo.png"></a>
       <div class="center">
           <p>Thank you to MapChart for the amazing tool that helped create our epidemiologic maps for each disease.</p>
@@ -65,25 +65,25 @@
     <div class="collumns">
       <div class="first-third">
         <ul>
-          <li><a href="">Contact</a></li>
-          <li><a href="">ABC - RI</a></li>
-          <li><a href="">MNGT</a></li>
-          <li><a href="">News</a></li>
+          <li><a href="../home">Home</a></li>
+          <li><a href="https://abcri.pt/">ABC-RI</a></li>
+          <li><a href="https://abcri.pt/research-groups/clevio-nobrega/#menu">MNGT group</a></li>
+          <li><a href="https://abcri.pt/news/">ABC-RI News</a></li>
         </ul>
       </div>
       <div class="second-third">
         <ul>
-          <li><a href="">Landing Page</a></li>
-          <li><a href="">Sources</a></li>
-          <li><a href="">UALG</a></li>
-          <li><a href="">Masters</a></li>
+          <li><a href="../authors">Authors</a></li>
+          <li><a href="https://www.ualg.pt/">UAlg</a></li>
+          <li><a href="https://fmcb.ualg.pt/en">UAlg - FMCB</a></li>
+          <li><a href="https://fmcb.ualg.pt/en/master-biomedical-sciences">Masters degree</a></li>
         </ul>
       </div>
       <div class="third-third">
         <ul>
-          <li><a href="">Help</a></li>
-          <li><a href="">Affiliations</a></li>
-            <li><a href="">CHANGED</a></li>
+          <li><a href="../">Landing Page</a></li>
+          <li><a href="../contact">Contact</a></li>
+          <li><a href="../objectives">Objectives</a></li>
         </ul>
       </div>
     </div>
