--- a/home/index.html
+++ b/home/index.html
@@ -127,7 +127,6 @@
         <div class="horizontal-slider" data-aos="fade-up" data-aos-offset="300" data-aos-duration="800" id="horizontal-slider">
           <h6>Polyglutamine Diseases</h6>
           <h2>Use search bar or click directly on your disease of interest</h2>
-
           <div class="slider-container" id="slider-horizontal">
             <div class="my_item" onclick="window.location='../diseases/hd';">
               <div class="card-container">
@@ -284,25 +283,25 @@
       <div class="collumns">
         <div class="first-third">
           <ul>
-            <li><a href="">Contact</a></li>
-            <li><a href="">ABCRI</a></li>
-            <li><a href="">MNGT</a></li>
-            <li><a href="">News</a></li>
+            <li><a href="../">Landing Page</a></li>
+            <li><a href="https://abcri.pt/">ABC-RI</a></li>
+            <li><a href="https://abcri.pt/research-groups/clevio-nobrega/#menu">MNGT group</a></li>
+            <li><a href="https://abcri.pt/news/">ABC-RI News</a></li>
           </ul>
         </div>
         <div class="second-third">
           <ul>
-            <li><a href="">Authors</a></li>
-            <li><a href="">Sources</a></li>
-            <li><a href="">UALG</a></li>
-            <li><a href="">Masters</a></li>
+            <li><a href="../authors">Authors</a></li>
+            <li><a href="https://www.ualg.pt/">UAlg</a></li>
+            <li><a href="https://fmcb.ualg.pt/en">UAlg - FMCB</a></li>
+            <li><a href="https://fmcb.ualg.pt/en/master-biomedical-sciences">Masters degree</a></li>
           </ul>
         </div>
         <div class="third-third">
           <ul>
-            <li><a href="">Help</a></li>
-            <li><a href="">Affiliations</a></li>
-            <li><a href="">Thanks for visiting!</a></li>
+            <li><a href="../contact">Contact</a></li>
+            <li><a href="../objectives">Objectives</a></li>
+            <li><a href="../appreciation">Appreciation</a></li>
           </ul>
         </div>
       </div>
