--- a/objectives/index.html
+++ b/objectives/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="Cache-control" content="no-cache">
   <link rel="shortcut icon" href="../Images/image.ico">
   <link rel="stylesheet" href="objective.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -84,25 +85,25 @@
       <div class="collumns">
         <div class="first-third">
           <ul>
-            <li><a href="">Contact</a></li>
-            <li><a href="">ABC - RI</a></li>
-            <li><a href="">MNGT</a></li>
-            <li><a href="">News</a></li>
+            <li><a href="../home">Home</a></li>
+            <li><a href="https://abcri.pt/">ABC-RI</a></li>
+            <li><a href="https://abcri.pt/research-groups/clevio-nobrega/#menu">MNGT group</a></li>
+            <li><a href="https://abcri.pt/news/">ABC-RI News</a></li>
           </ul>
         </div>
         <div class="second-third">
           <ul>
-            <li><a href="">Landing Page</a></li>
-            <li><a href="">Sources</a></li>
-            <li><a href="">UALG</a></li>
-            <li><a href="">Masters</a></li>
+            <li><a href="../authors">Authors</a></li>
+            <li><a href="https://www.ualg.pt/">UAlg</a></li>
+            <li><a href="https://fmcb.ualg.pt/en">UAlg - FMCB</a></li>
+            <li><a href="https://fmcb.ualg.pt/en/master-biomedical-sciences">Masters degree</a></li>
           </ul>
         </div>
         <div class="third-third">
           <ul>
-            <li><a href="">Help</a></li>
-            <li><a href="">Affiliations</a></li>
-              <li><a href="">Appreciation</a></li>
+            <li><a href="../">Landing Page</a></li>
+            <li><a href="../contact">Contact</a></li>
+            <li><a href="../appreciation">Appreciation</a></li>
           </ul>
         </div>
       </div>
