Contact page update

--- a/contact/index.html
+++ b/contact/index.html
@@ -38,12 +38,11 @@
       <div class="contact-info">
         <div> <p><i class="fas fa-envelope"></i>  Contact directly via mail:  </p></div>
         <ul>
-          <li><a href="mailto:poly@mail.com"> poly@mail.com </a></li>
-          <li><a href="mailto:poly@mail.com"> poly@mail.com </a></li>
-          <li><a href="mailto:poly@mail.com"> poly@mail.com </a></li>
+          <li><a href="mailto:polydatabase@mail.com"> polydatabase@gmail.com</a></li>
+          <li><a href="mailto:abc.ri@abcmedicalg.pt "> abc.ri@abcmedicalg.pt </a></li>
         </ul>
         <div> <i class="fa-solid fa-user"></i> Available social links:</div>
-        <div class="logos"> <a href=""><i class="fa-brands fa-facebook-square"></i></a><a href=""><i class="fa-brands fa-twitter-square"></i></a><a href=""><i class="fa-brands fa-linkedin"></i></a></div>
+        <div class="logos"> <a href="https://twitter.com/PolyqDatabase"><i class="fa-brands fa-twitter-square"></i></a><a href="https://www.linkedin.com/in/bernardo-estevam/"><i class="fa-brands fa-linkedin"></i></a></div>
       </div>
         <div class="contact-location">
           <div> <a class="link-map" href="https://www.google.com/maps/place/FMCB+-+Faculdade+de+Medicina+e+Ci%C3%AAncias+Biom%C3%A9dicas/@37.0432312,-7.9719514,17.5z/data=!4m8!1m2!2m1!1sualg+campus+de+gambelas!3m4!1s0x0:0x16208f00e7acab03!8m2!3d37.0450599!4d-7.9709448"><i class="fas fa-map-marker-alt"></i> 8005-139 Faro, Gambelas, Portugal</a> </div>
