Changes to footers of all pages
Changed width, borders, sizes etc.

--- a/diseases/sca2/index.html
+++ b/diseases/sca2/index.html
@@ -384,9 +384,9 @@ Created by potrace 1.10, written by Peter Selinger 2001-2011
 </svg>
     <p> &copyPolyQ Database. All rights reserved 2021-2022. Authors mentioned and database creators all accounted for.</p>
     <div class="logos">
-      <a class="logo-one" href=""> <img src="../../Images/Logo_ABCRI.png" alt=""></a>
-      <a class="logo-two" href=""> <img src="../../Images/Logo_MNGT.png" alt=""></a>
-      <a class="logo-three" href=""> <img src="../../Images/fmcb-mod.png" alt=""></a>
+      <a class="logo-one"> <img src="../../Images/Logo_ABCRI.png" alt=""></a>
+      <a class="logo-two"> <img src="../../Images/Logo_MNGT.png" alt=""></a>
+      <a class="logo-three"> <img src="../../Images/fmcb-mod.png" alt=""></a>
     </div>
   </footer>
   <script src="../../Scripts/jquery-3.6.0.min.js"></script>
