--- a/objectives/index.html
+++ b/objectives/index.html
@@ -131,9 +131,9 @@
   </svg>
       <p> &copyPolyQ Database. All rights reserved 2021-2022. Authors mentioned and database creators all accounted for.</p>
       <div class="logos">
-        <a class="logo-one" href=""> <img src="../Images/Logo_ABCRI.png" alt=""></a>
-        <a class="logo-two" href=""> <img src="../Images/Logo_MNGT.png" alt=""></a>
-        <a class="logo-three" href=""> <img src="../Images/fmcb-mod.png" alt=""></a>
+        <a class="logo-one"> <img src="../Images/Logo_ABCRI.png" alt=""></a>
+        <a class="logo-two"> <img src="../Images/Logo_MNGT.png" alt=""></a>
+        <a class="logo-three"> <img src="../Images/fmcb-mod.png" alt=""></a>
       </div>
     </footer>
     <script src="../Scripts/app.js"></script>
