Update home page
Changed 3rd paragraph of intro information

--- a/home/index.html
+++ b/home/index.html
@@ -120,7 +120,7 @@
               <ul>
                 <li>There are 9 polyglutamine diseases: Huntington's, SBMA, DRPLA, SCA1, SCA2, SCA3, SCA6, SCA7 and SCA17.</li>
                 <li>From brief disease introductions to molecular and biological mechanisms. Here we present various information about every polyglutmine disease to a certain extent.</li>
-                <li>Each disease will have the following topics: Introduction, first described cases, epidemiology, causative gene, various information regarding the codified protein, pathophysiology (pathogenic mechanisms) and a clinical manifestations section which will include neuropathology, signs and symptoms.  </li>
+                <li>Each disease will have an introduction, first described cases description, epidemiology data with representative maps, various information on the gene that causes disease and the codified protein (normal and mutated), pathophysiology section which presents important cellular pathogenic mechanisms and a clinical segment that includes neuropathology findings, signs and symptoms found in disease patients.  </li>
               </ul>
           </div>
         </div>
