Landing page update and disease page script update
Landing page responsiveness for width 280px.

Disease pages with working interactive image script in script folder.

--- a/diseases/sbma/index.html
+++ b/diseases/sbma/index.html
@@ -361,7 +361,7 @@ Created by potrace 1.10, written by Peter Selinger 2001-2011
     </div>
   </footer>
   <script src="../../Scripts/jquery-3.6.0.min.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/interactiveimagejs@2.7.1/dist/interactive-image.min.js"></script>
+  <script src="../../Scripts/interactive-image.min.js"></script>
   <script src="../../Scripts/Image-Int-Scripts/image-int-sbma.js"></script>
   <script>
             var indicator = document.getElementById('indicator');
