--- a/diseases/drpla/index.html
+++ b/diseases/drpla/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="int-image.css">
 </head>
 <body>
+  <script src="../../Scripts/jquery-3.6.0.min.js"></script>
   <script src="ScrollSpy.min.js"></script>
   <script src="./highlight-js/highlight.pack.js"></script>
     <header>
@@ -348,7 +349,7 @@ Created by potrace 1.10, written by Peter Selinger 2001-2011
     </div>
   </footer>
   <script src="../../Scripts/jquery-3.6.0.min.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/interactiveimagejs@2.7.1/dist/interactive-image.min.js"></script>
+  <script src="../../Scripts/interactive-image.min.js"></script>
   <script src="../../Scripts/Image-Int-Scripts/image-int-drpla.js"></script>
   <script>
             var indicator = document.getElementById('indicator');
