--- a/contact/index.html
+++ b/contact/index.html
@@ -38,7 +38,7 @@
       <div class="contact-info">
         <div> <p><i class="fas fa-envelope"></i>  Contact directly via mail:  </p></div>
         <ul>
-          <li><a href="mailto:polydatabase@mail.com"> polydatabase@gmail.com</a></li>
+          <li><a href="mailto:polydatabase@mail.com"> polyqdatabase@gmail.com</a></li>
           <li><a href="mailto:abc.ri@abcmedicalg.pt "> abc.ri@abcmedicalg.pt </a></li>
         </ul>
         <div> <i class="fa-solid fa-user"></i> Available social links:</div>
