--- a/contact/index.html
+++ b/contact/index.html
@@ -19,7 +19,7 @@
     </div>
     <!---alert message end --->
     <header>
-      <a href=""><img class="abcri-logo" src="../Images/Logo_ABCRI.png"></a>
+      <a href="https://abcri.pt/"><img class="abcri-logo" src="../Images/Logo_ABCRI.png"></a>
       <a><img class="mngt-logo" src="../Images/Logo_MNGT.png"></a>
       <h1> <strong>A ABC Research Institute polyglutamine disease database</strong></h1>
     </header>
@@ -38,7 +38,7 @@
       <div class="contact-info">
         <div> <p><i class="fas fa-envelope"></i>  Contact directly via mail:  </p></div>
         <ul>
-          <li><a href="mailto:polydatabase@mail.com"> polyqdatabase@gmail.com</a></li>
+          <li><a href="mailto:polydatabase@mail.com"> polydatabase@gmail.com</a></li>
           <li><a href="mailto:abc.ri@abcmedicalg.pt "> abc.ri@abcmedicalg.pt </a></li>
         </ul>
         <div> <i class="fa-solid fa-user"></i> Available social links:</div>
