--- a/diseases/sca2/index.html
+++ b/diseases/sca2/index.html
@@ -16,7 +16,7 @@
   <script src="ScrollSpy.min.js"></script>
   <script src="highlight-js/highlight.pack.js"></script>
     <header>
-      <a href=""><img class="abcri-logo" src="../../Images/Logo_ABCRI.png"></a>
+      <a href="https://abcri.pt/"><img class="abcri-logo" src="../../Images/Logo_ABCRI.png"></a>
       <a><img class="mngt-logo" src="../../Images/Logo_MNGT.png"></a>
       <h1> <strong>A ABC Research Institute polyglutamine disease database</strong></h1>
     </header>
