--- a/objectives/index.html
+++ b/objectives/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header>
-    <a href=""><img class="abcri-logo" src="../Images/Logo_ABCRI.png"></a>
+    <a href="https://abcri.pt/"><img class="abcri-logo" src="../Images/Logo_ABCRI.png"></a>
     <a><img class="mngt-logo" src="../Images/Logo_MNGT.png"></a>
     <h1> <strong>A ABC Research Institute polyglutamine disease database</strong></h1>
   </header>
@@ -30,7 +30,7 @@
       <h2 class="title"> The objectives of PolyQ Database </h2>
       <div class="qaa">
         <div class="question">
-          <h3> What is this for?  </h3>
+          <h3> What is this database for?</h3>
           <svg width="15" height="10" viewBox="0 0 42 25">
             <path d="M3 3L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"/>
           </svg>
