--- a/diseases/drpla/index.html
+++ b/diseases/drpla/index.html
@@ -19,7 +19,7 @@
     <header>
       <a href="https://abcri.pt/"><img class="abcri-logo" src="../../Images/Logo_ABCRI.png"></a>
       <a><img class="mngt-logo" src="../../Images/Logo_MNGT.png"></a>
-      <h1> <strong>A ABC Research Institute polyglutamine disease database</strong></h1>
+      <h1> <strong>An ABC Research Institute polyglutamine disease database</strong></h1>
     </header>
   <nav>
     <img class="poly-logo" src="../../Images/logo-plyq.png"/>
@@ -341,7 +341,7 @@ Created by potrace 1.10, written by Peter Selinger 2001-2011
 <path d="M1362 588 c-7 -7 -12 -36 -12 -65 0 -57 17 -76 48 -56 22 13 27 33 8 33 -9 0 -16 -4 -16 -10 0 -5 -4 -10 -10 -10 -5 0 -10 9 -10 20 0 15 7 20 25 20 21 0 25 5 25 28 0 29 -16 52 -35 52 -6 0 -16 -5 -23 -12z m38 -40 c0 -5 -7 -8 -15 -8 -15 0 -20 21 -8 33 7 7 23 -11 23 -25z"/>
 </g>
 </svg>
-    <p> &copyPolyQ Database. All rights reserved 2021-2022. Authors mentioned and database creators all accounted for.</p>
+    <p>&copyPolyQ Database. All rights reserved 2021-2022. Authors and database creators all duly mentioned.</p>
     <div class="logos">
       <a class="logo-one"> <img src="../../Images/Logo_ABCRI.png" alt=""></a>
       <a class="logo-two"> <img src="../../Images/Logo_MNGT.png" alt=""></a>
