--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <i class="fas fa-bars" onclick="showMenu()"> </i>
       </nav>
         <div class="text-box">
-          <h1> A Database for Polyglutamine Diseases &#129504; </h1>
+          <h1> A Database for Polyglutamine Diseases</h1>
           <p> Information on the 9 known different diseases that result from increased number of CAG triplets.</p>
           <a href="home" class="btn-visit"> Visit PolyQ Database</a>
         </div>
